# android_sdf

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/spheremarch/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/spheremarch/: MainActivity.kt  MainActivityView.kt  MainViewModel.kt  SphereMarcherView.kt
app/src/main/java/com/example/spheremarch/adapter/: MainAdapter.kt  stateful.kt  ui_dsl.kt
app/src/main/java/com/example/spheremarch/ext/: dimen.kt  field.kt  mapping_delegate.kt  view_ext.kt  vm_ext.kt
app/src/main/java/com/example/spheremarch/marcher/: MarcherCompute.kt  MarcherComputeCPU.kt  MarcherComputeNative.kt  MarcherConfig.kt
app/src/main/java/com/example/spheremarch/math/: WindowMean.kt  mat.kt  vec.kt  vec2_factory.kt  vec3_factory.kt  vec4_factory.kt
app/src/main/java/com/example/spheremarch/scene/: mod.kt  objects.kt  op.kt  scene.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/spheremarch/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
nativesm/: .gitignore  Cargo.toml
nativesm/build_src/: file.rs  main.rs  util.rs
nativesm/build_src/shaders/: mod.rs  types.rs
nativesm/shader_sources/: sm.fs  sm.vs
nativesm/src/: jni_bindings.rs  lib.rs  preview.rs  ty.rs
nativesm/src/cpu_processor/: mod.rs
nativesm/src/gpu_processor/: grepr.rs  mod.rs  renderer.rs  util.rs
nativesm/src/scene/: material.rs  mod.rs  modifier.rs  node.rs  op.rs  shape.rs  viewer.rs
(+11 files in other folders)
